--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <img class="foto" src="ims/eu.jpg" alt="minha foto">
             <div class="sobre">
                 <h1 class="im">Meu nome é Bryan Ramos</h1>
-                <p class="bio">Tenho 15 anos, estou aprendendo a mexer com hTML CSS, e estou trabalhando na Bymodela, com modelagem 3d, pretendo trabalhar como programador com htmlk e css.</p>
+                <p class="bio">Tenho 15 anos, estou aprendendo a mexer com HTML, CSS e estou trabalhando na Bymodela, com modelagem 3d, pretendo trabalhar como programador com HTML e CSS.</p>
                 <div class="infos">
                 <div>
                 <p>Email para contato:</p>
@@ -92,5 +92,6 @@
             <a href="https://github.com/bryaanvlr" target="_blank" rel="noopener noreferrer"><img src="ims/Octicons-mark-github.svg (1).png" alt="github" class="git"></a>
             <p class="gitescrito">Github</p>
         </footer>
+        <script src="script.js"></script>
 </body>
 </html>
